# tradingstuff

./: flake.nix  pyproject.toml  trading.py
